# plato-fflearning

./: README.md  pyproject.toml
plato_fflearning/: __init__.py
tests/: test_fflearning.py
