[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
license = "MIT"
name = "plato-fflearning"
version = "0.1.0"
description = "Forward-Forward learning for PLATO — replacing backprop with positive/negative passes"
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]